# blockly-vehicle

./: .gitignore  CLAUDE.md  README.md
TurboPi/Functions/: ColorTracking.py  ColorWarning.py  FaceTracking.py  lab_adjust.py
TurboPi/HiwonderSDK/: FourInfrared.py  hardware_test.py
cloud/frontend/: DEVELOPMENT.md  index.html  package-lock.json  package.json  vite.config.js
cloud/frontend/css/: main.css
cloud/frontend/js/: courses.js  main.js  pinyin.js
cloud/gateway/: main.py  pyproject.toml  start.sh
cloud/gateway-go/: Makefile  README.md  go.mod  go.sum
cloud/gateway-go/api/http/: handlers.go
cloud/gateway-go/cmd/gateway/: main.go
cloud/gateway-go/configs/: config.yaml
cloud/gateway-go/deployments/: blockly-gateway.service
cloud/gateway-go/internal/config/: config.go
cloud/nginx/sites-available/: .blockly-vehicle.conf.swp  blockly-vehicle.conf
docs/: 01-system-architecture.md  02-block-api.md  03-code-generator.md  04-communication.md  05-block-definitions.md  06-course-design.md  07-deployment.md
scripts/: vehicle-start.sh
tests/: conftest.py
tests/cloud/: __init__.py  test_gateway.py
tests/vehicle/: __init__.py  test_executor_sandbox.py  test_hal_motion.py  test_hal_sensor.py
vehicle/: HARDWARE.md  app.py  check-deps.sh  pyproject.toml  requirements-hardware.txt  vehicle-start.sh  wsgi.py
vehicle/config/: gunicorn.conf.py
vehicle/connection/: manager.py
vehicle/executor/: __init__.py  sandbox.py
vehicle/hal/: __init__.py  gimbal_controller.py  motion_controller.py  sensor_controller.py  vision_controller.py
(+8 files in other folders)
